# ecom-feedback

./: .gitignore  README.md  package.json
.github/workflows/: ci-cd.yml
agents/: .env.example  README.md  agent_config.example.yaml  pyproject.toml
agents/src/sagad_feedback/: __init__.py  agent_handlers.py  api.py  band_agent.py  band_gateway.py  cli.py  db.py  deterministic_logic.py  llm.py  prompts.py  schemas.py  seed.py  settings.py  utils.py  workflow.py
agents/tests/: test_deterministic_logic.py  test_workflow.py
apps/web/: next.config.ts  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AgentCard.tsx  AgentInspector.tsx  AgentWorkflowBoard.tsx  BandSetupPanel.tsx  FinalReport.tsx  HandoffPath.tsx  PixelAgent.tsx  ReviewApp.tsx  ReviewForm.tsx  ReviewTimeline.tsx  SampleDataButton.tsx  StatusBadge.tsx  WorkPacket.tsx
apps/web/lib/: agent-workflow.ts  api.ts  sample-data.ts  types.ts
docs/: ARCHITECTURE.md  BAND_SETUP.md  DEMO_SCRIPT.md  EDITING_GUIDE.md  SUBMISSION.md  TROUBLESHOOTING.md
