[project]
name = "sagad-feedback-review-agents"
version = "0.1.0"
description = "FastAPI backend and Band-connected agent runners for SagadOS Feedback Review."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.3.0"]
band = ["thenvoi-sdk[langgraph]>=0.2.0; python_version >= '3.11'"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/sagad_feedback"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
